tests/baselines/reference/internalAliasUninitializedModuleInsideLocalModuleWithExport.errors.txt
internalAliasUninitializedModuleInsideLocalModuleWithExport.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasUninitializedModuleInsideLocalModuleWithExport.ts(2,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasUninitializedModuleInsideLocalModuleWithExport.ts(9,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== internalAliasUninitializedModuleInsideLocalModuleWithExport.ts (3 errors) ====
    export module a {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module b {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface I {
                foo();
            }
        }
    }
    
    export module c {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import b = a.b;
        export var x: b.I;
        x.foo();
    }